--- a/css/styles.css
+++ b/css/styles.css
@@ -63,8 +63,48 @@ p, .p{font-size: 16px;line-height: 1.5;font-weight: 400;}
 .overlay:after {content: '';width: 100%;height: 100%;background: rgba(0,16,46,.5);position: absolute;left: 0;top: 0;z-index: 1;}
 .overlay-content {position: absolute;left: 15px;top: 15px;z-index: 2;color: #fff;}
 
+/* Loader */
+body{height: 100vh;overflow: hidden;}
+.loaded{height: auto;overflow: auto;}
+#content{opacity: 0;visibility: hidden;transition: all .4s ease-out;}
+.loaded #content{opacity: 1;visibility: visible;}
+#loader-wrapper{width: 100%;height: 100vh;background: #ffd00b;position: fixed;top: 0;left: 0;z-index: 1000;transition: transform .4s ease-out;display: flex;align-items: center;justify-content: center;}
+#loader{display: block;position: relative;width: 80px;height: 80px;border-radius: 50%;border: 3px solid transparent;border-top-color: #fff;-webkit-animation: spin 2s linear infinite; animation: spin 2s linear infinite;}
+#loader:before, #loader:after
+{content: '';position: absolute;border-radius: 50%;border: 3px solid transparent;border-top-color: #fff;-webkit-animation: spin 2s linear infinite; animation: spin 2s linear infinite;}
+#loader:before{left: 5px;right: 5px;top: 5px;bottom: 5px;animation-duration: 3s;}
+#loader:after{left: 15px;right: 15px;top: 15px;bottom: 15px;animation-duration: 1s;}
+@-webkit-keyframes spin{
+    from{transform: rotate(0);}
+    to{transform: rotate(360deg);}
+}
+@keyframes spin{
+    from{transform: rotate(0);}
+    to{transform: rotate(360deg);}
+}
+.loaded #loader-wrapper{transform: translateY(-150%);transition: transform .4s ease-out;}
+.loaded #loader{display: none;}
+
+/* Custom Scrollbar */
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+display: none;
+}
+/* Hide scrollbar for IE, Edge and Firefox */
+body {
+-ms-overflow-style: none;  /* IE and Edge */
+scrollbar-width: none;  /* Firefox */
+}
+.custom-scroll {position: fixed;top: 0;right: 0;z-index: 100;width: 4px;height: 100%;}
+.progress-bar {width: 100%;height: 0;background: #ffd00b;}
+
+
 .site-header {padding: 10px 0;position: absolute;left: 0;top: 0;z-index: 9;width: 100%;}
-.site-header.sticky{background: #000A1D;position: fixed;animation: headerAnim .5s;}
+.site-header.sticky{background: #000A1D;position: fixed;-webkit-animation: headerAnim .5s;animation: headerAnim .5s;}
+@-webkit-keyframes headerAnim{
+    from{transform: translateY(-70px);}
+    to{transform: translateY(0);}
+}
 @keyframes headerAnim{
     from{transform: translateY(-70px);}
     to{transform: translateY(0);}
@@ -88,7 +128,7 @@ p, .p{font-size: 16px;line-height: 1.5;font-weight: 400;}
 .overlay-navbar>ul{margin-bottom: 60px;}
 .overlay-navbar>ul>li{margin: 30px auto;}
 .overlay-navbar>ul>li>a {color: #fff;font-size: 24px;font-weight: 600;transition: all .3s linear;}
-.contact-info {display: flex;flex-direction: column;align-items: flex-end;text-align: right;}
+.contact-info {display: flex;flex-direction: column;align-items: flex-end;text-align: right;margin-bottom: 50px;}
 .contact-info>div{margin-bottom: 20px;}
 .contact-info>div:last-child{margin-bottom: 0;}
 .contact-info h5 {font-size: 15px;color: #fff;margin-bottom: 10px;}
@@ -124,14 +164,13 @@ p, .p{font-size: 16px;line-height: 1.5;font-weight: 400;}
 .footer-flex{display: flex;justify-content: center;flex-wrap: wrap;text-align: center;}
 .footer-flex>.footer-item{width: 33.3%;}
 .footer-item a {margin: 5px 0;display: inline-block;}
-.footer-logo {width: 150px;display: block;}
+.footer-logo {width: 70px;display: block;}
 .footer-item .social-links{display: flex;justify-content: center;}
 .footer-item .social-links li{margin: 0 10px;}
 .footer-item .social-links li a{font-size: 20px;}
 .footer-item .social-links img{width: 35px;}
 .copyright-sec {padding-top: 40px;margin-top: 40px;border-top: 1px solid #fff;text-align: center;}
 .copyright-sec p{font-size: 12px;opacity: .8;font-weight: 500;}
-.copyright-sec p span{color: #ffd00b;}
 .copyright-sec img{width: 50px;}
 
 .two-col-wrap {display: flex;flex-wrap: wrap;}
