--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 *{padding: 0;margin: 0;box-sizing: border-box;}
 body{font-family: 'Montserrat', sans-serif;font-weight: 400;background-color: #000A1D;}
-.overlay {overflow: hidden;position: relative;}
-.overlay:after {content: '';width: 100%;height: 100%;background: rgba(0,0,0,.6);position: absolute;left: 0;top: 0;z-index: 5;}
+.document-overlay {overflow: hidden !important;position: relative;}
+.document-overlay:after {content: '';width: 100%;height: 100%;background: rgba(0,0,0,.6);position: absolute;left: 0;top: 0;z-index: 5;}
 ul, li{list-style: none;}
 img{max-width: 100%;height: auto;vertical-align: middle;}
 a{text-decoration: none;}
