contact us page

--- a/css/styles.css
+++ b/css/styles.css
@@ -95,7 +95,7 @@ body {
 -ms-overflow-style: none;  /* IE and Edge */
 scrollbar-width: none;  /* Firefox */
 }
-.custom-scroll {position: fixed;top: 0;right: 0;z-index: 100;width: 4px;height: 100%;}
+.custom-scroll {position: fixed;top: 0;left: 0;z-index: 100;width: 4px;height: 100%;}
 .progress-bar {width: 100%;height: 0;background: #ffd00b;}
 
 
@@ -219,6 +219,8 @@ h3, .h3 {font-size: 24px;}
 
 .p.lg {font-size: 18px;}
 
+.py-100{padding: 50px 0;}
+
 .navbar{display: none;}
 .content-section .h1 {margin-bottom: 10px;}
 .content-section p{font-size: 16px;}
@@ -247,7 +249,7 @@ h3, .h3 {font-size: 24px;}
 
 
 /**********************Banner******************/
-.page-banner {max-height: 400px;height: auto;overflow: hidden;position: relative;display: flex;flex-direction: column;align-items: center;justify-content: center;text-align: center;}
+.page-banner {max-height: 450px;height: auto;overflow: hidden;position: relative;display: flex;flex-direction: column;align-items: center;justify-content: center;text-align: center;}
 .page-banner:after{content: '';width: 100%;height: 100%;background:rgba(0,16,46,.5);position: absolute;left: 0;top: 0;}
 .page-banner .content {position: absolute;z-index: 1;}
 
@@ -256,4 +258,26 @@ h3, .h3 {font-size: 24px;}
 
 @media only screen and (max-width: 767px) {
 .two-col-content>*{width: 100%;}
+}
+
+.map-bg{background-image: url(../images/map-bg.png);background-repeat: no-repeat;background-size: cover;background-position: center;}
+.contact-form-wrap {display: flex;justify-content: space-between;flex-wrap: wrap;max-width: 900px;width: 100%;margin: auto;}
+.contact-form-wrap .c-left{width: 58%;padding: 15px 30px 15px 15px;background: #ffd00b;}
+.contact-form-wrap .c-right{width: 40%;}
+.map-wrapper {position: relative;height: 100%;}
+.map-wrapper iframe {position: absolute;left: 0;right: 0;width: 100%;height: 100%;}
+.form-group {position: relative;margin-top: 30px;}
+.form-control {width: 100%;padding: 10px 10px 10px 0;font-size: 16px;color: #000A1D; font-weight: 500;border-radius: 0;border: none;border-bottom: 2px solid #000A1D;background: transparent;}
+.form-control:focus,
+.form-control:active{outline: none;}
+textarea.form-control{min-height: 100px;}
+.form-group label{display: block;color: #000A1D;font-weight: 500;position: absolute;top: 5px;transition: top .2s ease-in-out;}
+.form-control.active + label {top: -10px;}
+.submit-btn {padding: 10px 15px;font-size: 16px;font-weight: 600;text-transform: uppercase;border: none;background: #000A1D;color: #fff;min-width: 150px;cursor: pointer;transition: all .3s linear;}
+.submit-btn:hover{background: #fff;color: #000A1D;}
+
+@media only screen and (max-width: 767px) {
+.contact-form-wrap .c-left,
+.contact-form-wrap .c-right{width: 100%;}
+.contact-form-wrap .c-right{min-height: 350px;margin-top: 20px;}
 }
