--- a/css/styles.css
+++ b/css/styles.css
@@ -295,3 +295,13 @@ textarea.form-control{min-height: 100px;}
     background-color: #ffd00b;
     border: none;
 }
+.textarea {
+    width: 100%;
+    padding: 0 15px;
+    height: 50vh;
+    margin: 10px auto;
+}
+.textarea textarea {
+    width: 100%;
+    height: 100%;
+}
